Fixed the issue with images loading partially on Safari browsers by removing filter-drop from Product Containers

--- a/styles/ProductItem.module.css
+++ b/styles/ProductItem.module.css
@@ -12,7 +12,6 @@
 
 .imageContainer {
   border: 1px solid #cfcfcf;
-  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.1));
   border-radius: 3px;
   background: white;
   background-color: rgb(239, 239, 239);
@@ -23,7 +22,6 @@
 }
 
 .productImg {
-  display: block;
   width: 100%;
   height: 100%;
   object-fit: cover;
